--- a/popup.html
+++ b/popup.html
@@ -2,18 +2,66 @@
 <html>
 <head>
   <style>
-    body { width: 300px; padding: 15px; font-family: sans-serif; background-color: #f4f4f9; }
-    #container { border-left: 4px solid #4285f4; padding-left: 10px; }
-    h2 { font-size: 16px; color: #333; margin-top: 0; }
-    p { font-size: 14px; color: #555; line-height: 1.4; white-space: pre-wrap; }
-    .loader { color: #888; font-style: italic; }
+    body { width: 350px; margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #1e1e1e; color: #d4d4d4; }
+    .screen { padding: 15px; display: none; }
+    .active { display: block; }
+
+    /* Header & Icons */
+    .header { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #333; padding-bottom: 8px; margin-bottom: 10px; }
+    .header h1 { font-size: 14px; margin: 0; color: #4fc1ff; text-transform: uppercase; letter-spacing: 1px; }
+    .icon-btn { cursor: pointer; background: none; border: none; font-size: 18px; color: #888; }
+    .icon-btn:hover { color: white; }
+
+    /* Settings Form */
+    .field-group { margin-bottom: 15px; }
+    label { display: block; font-size: 11px; color: #888; margin-bottom: 5px; }
+    input { width: 100%; padding: 8px; box-sizing: border-box; background: #2d2d2d; border: 1px solid #444; color: white; border-radius: 4px; }
+    button.save-btn { width: 100%; padding: 10px; background: #007acc; color: white; border: none; border-radius: 4px; cursor: pointer; }
+    button.save-btn:hover { background: #005a9e; }
+
+    /* Question Styles */
+    #questionTitle { font-size: 16px; font-weight: bold; margin-bottom: 12px; line-height: 1.4; }
+    #answerContent { font-size: 13px; line-height: 1.6; }
+    pre { background: #000; padding: 10px; border-radius: 5px; overflow-x: auto; border: 1px solid #333; }
   </style>
 </head>
 <body>
-  <div id="container">
-    <h2 id="questionTitle">Daily Question</h2>
-    <p id="answerContent" class="loader">Fetching your daily knowledge...</p>
+
+  <div id="mainScreen" class="screen active">
+<div class="header">
+  <h1>Daily Dev Byte</h1>
+  <div style="display: flex; gap: 5px;"> <button id="refreshBtn" class="icon-btn" title="Get Next Byte">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="23 4 23 10 17 10"></polyline><polyline points="1 20 1 14 7 14"></polyline><path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path></svg>
+    </button>
+    <button id="goToSettings" class="icon-btn" title="Settings">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
+    </button>
   </div>
+</div>
+    <div id="content">
+      <div id="questionTitle">Loading...</div>
+      <div id="answerContent">Please wait while we fetch today's byte.</div>
+    </div>
+  </div>
+
+  <div id="settingsScreen" class="screen">
+    <div class="header">
+  <h1>Configuration</h1>
+  <button id="backToMain" class="icon-btn" title="Back">
+    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+  </button>
+</div>
+    <div class="field-group">
+      <label>GOOGLE SHEET ID</label>
+      <input type="text" id="sheetIdInput" placeholder="Paste ID from your Sheet URL">
+    </div>
+    <div class="field-group">
+      <label>GEMINI API KEY</label>
+      <input type="password" id="apiKeyInput" placeholder="Paste your API key">
+    </div>
+    <button id="saveSettings" class="save-btn">Save & Reload</button>
+  </div>
+  <script src="env.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
